updated some copy and spacing issues on mobile - made it so the overlay on the menu is a uniformed color

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -9,11 +9,11 @@
 /*COLORS*/
   --colorBlueA: rgb(0, 0, 37);
 
-  --streamColor: #004e66c8;
-  --marketColor: #b4d2ffcd;
-  --frontPageColor:#d9e9d9cd; 
+  --streamColor:  #000f2b85;
+  --marketColor:  #000f2b85;
+  --frontPageColor: #000f2b85;
   --radioColor: #000f2b85;
-  --liveColor: #ffb4b4c3;
+  --liveColor:  #000f2b85;
 
   --darkFont: #000000;
   --lightFont: #FFFFFF;
@@ -64,10 +64,16 @@ body::before {
 
 header {
   width:100%;
-  z-index:0;
+  z-index:10;
   height:40px;
 }
 
+@media screen and (max-width: 620px) {
+  header {
+    height: 55px;
+    background-color:red;
+  }
+}
 
 
 .login-button {
@@ -156,6 +162,24 @@ footer a {
 footer a:hover { 
   color: var(--lightFont);
 }
+
+/*Mobile Footer */
+
+@media screen and (max-width: 620px) {
+  footer {
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style:solid;
+    border-width:.5px;
+    border-color:var(--borderColor-inactive);
+  }
+}
+
+
+
+
 
   ul {
     list-style: none;
@@ -477,9 +501,14 @@ audio {
 
 
 .liveShowContentDescWrap {
-  background-color:var(--backgroundNavy);
-  width:100%;
-  padding:20px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* center vertically */
+  align-items: center; /* center horizontally */
 
 }
 /*LIVESHOW = CALENDAR STYLES */
@@ -986,9 +1015,14 @@ audio {
   flex-direction: column;
   align-items: center;
   justify-content: center;
- 
 }
 
+@media only screen and (max-width: 620px) {
+  .frontSubHeader {
+    text-align:center;
+    
+  }
+}
 
 .monthBlock {
   width:720px;
@@ -1014,6 +1048,7 @@ audio {
 
 .monthDisplay-text {
   font-size:72px;
+  line-height:75%;
 }
 
 .logoBig {
@@ -1209,6 +1244,19 @@ audio {
   background-color: var(--happyHover);
 }
 
+@media only screen and (max-width: 700px) {
+  .market-product-grid-parent {
+    background-color: rgba(0, 73, 128, 0);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* center horizontally */
+    justify-content: center; /* center vertically */
+    padding: 5px;
+    padding-top:175px;
+  }
+}
 
 /*MarketPlace Mobile */
 
@@ -1217,13 +1265,8 @@ audio {
 @media only screen and (max-width: 700px) {
   
 
-  .market-product-grid-parent {
-    background-color: rgba(0, 73, 128, 0.233);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-  }
+
+  
 
   .market-product-grid {
     grid-template-columns: 1fr; /* Set grid to one column per row */
